URL yapısı güncellendi - clean URLs

--- a/404.html
+++ b/404.html
@@ -138,7 +138,7 @@
                 <div class="nav-wrapper">
                     <!-- Logo -->
                     <div class="logo">
-                        <a href="index.html">
+                        <a href="/">
                             <img src="btadijitallogo.jpg" alt="BTA Dijital Logo" width="150" height="42">
                         </a>
                     </div>
@@ -146,19 +146,19 @@
                     <!-- Desktop Navigation -->
                     <ul class="nav-menu" id="navMenu">
                         <li class="nav-item">
-                            <a href="index.html" class="nav-link">Anasayfa</a>
+                            <a href="/" class="nav-link">Anasayfa</a>
                         </li>
                         <li class="nav-item">
-                            <a href="hakkimizda.html" class="nav-link">Hakkımızda</a>
+                            <a href="/Hakkimizda/" class="nav-link">Hakkımızda</a>
                         </li>
                         <li class="nav-item">
-                            <a href="services.html" class="nav-link">Hizmetler</a>
+                            <a href="/Hizmetler/" class="nav-link">Hizmetler</a>
                         </li>
                         <li class="nav-item">
-                            <a href="influencer.html" class="nav-link">Influencer Marketing</a>
+                            <a href="/Influencer/" class="nav-link">Influencer Marketing</a>
                         </li>
                         <li class="nav-item">
-                            <a href="contact.html" class="nav-link">İletişim</a>
+                            <a href="/Iletisim/" class="nav-link">İletişim</a>
                         </li>
                     </ul>
                     
@@ -186,11 +186,11 @@
                 Lütfen URL'yi kontrol edin veya ana sayfamıza dönün.
             </p>
             <div class="error-actions">
-                <a href="index.html" class="error-btn">
+                <a href="/" class="error-btn">
                     <i class="fas fa-home"></i>
                     Ana Sayfaya Dön
                 </a>
-                <a href="contact.html" class="error-btn error-btn-secondary">
+                <a href="/Iletisim/" class="error-btn error-btn-secondary">
                     <i class="fas fa-envelope"></i>
                     Bize Ulaşın
                 </a>
