--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@
     <!-- Main Stylesheet -->
     <link rel="stylesheet" href="style.css">
     
+    <!-- Ana sayfa için header beyaz arka plan -->
+    <style>
+        .header { background-color: rgba(255, 255, 255, 0.98) !important; }
+        .header.scrolled { background-color: rgba(255, 255, 255, 0.95) !important; }
+    </style>
+    
     <!-- Structured Data - Organization & LocalBusiness -->
     <script type="application/ld+json">
     {
